--- a/themes/geek/_config.yml
+++ b/themes/geek/_config.yml
@@ -10,6 +10,8 @@ menu:
   关于: /about
   Github: https://github.com/marwin233
 
+rss: /atom.xml
+
 # 做了域名限制，请改成自己的 KEY
 valine:
   appId: WyRGpPKmnK3RoAVMO2BsfcdO-gzGzoHsz
