--- a/themes/geek/_config.yml
+++ b/themes/geek/_config.yml
@@ -8,7 +8,7 @@ menu:
   作品: /project
   友联: /links
   关于: /about
-  Github: https://github.com/marwin233
+  Github: https://github.com/marwincn
 
 rss: /atom.xml
 
