--- a/themes/landscape/_config.yml
+++ b/themes/landscape/_config.yml
@@ -2,6 +2,9 @@
 menu:
   Home: /
   Archives: /archives
+  About: /about
+  RSS: /rss2.xml
+  Github: https://github.com/marwincn
 rss: /atom.xml
 
 # Content
