--- a/themes/landscape/_config.yml
+++ b/themes/landscape/_config.yml
@@ -32,7 +32,7 @@ show_count: false
 # Miscellaneous
 google_analytics:
 gauges_analytics:
-favicon: /favicon.png
+favicon: /blog/favicon.png
 twitter:
 google_plus:
 fb_admins:
