--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }} # github action 默认上下文
+        personal_token: ${{ secrets.PERSONAL_TOKEN }}
         external_repository: marwincn/marwincn.github.io
         publish_dir: ./public
         publish_branch: main
