--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,5 +29,7 @@ jobs:
       with:
         personal_token: ${{ secrets.PERSONAL_TOKEN }}
         external_repository: marwincn/marwincn.github.io
-        publish_dir: ./public
         publish_branch: main
+        publish_dir: ./public
+        cname: marwin.cn
+        commit_message: ${{ github.event.head_commit.message }}
