--- a/themes/landscape/_config.yml
+++ b/themes/landscape/_config.yml
@@ -4,7 +4,7 @@ menu:
   Archives: /archives
   About: /about
   Github: https://github.com/marwincn
-rss: /atom.xml
+rss: /rss2.xml
 
 # Content
 excerpt_link: Read More
