新增一篇文章

--- a/themes/landscape/_config.yml
+++ b/themes/landscape/_config.yml
@@ -2,7 +2,7 @@
 menu:
   Home: /
   Archives: /archives
-  About: /about
+  # About: /about
   Github: https://github.com/marwincn
 rss: /rss2.xml
 
